version/stable/_sources/api/ansys/mechanical/stubs/v241/Ansys/ACT/Automation/Mechanical/FE/CDB/LocalCommand.rst.txt
.. vale off



:class:`LocalCommand`
=====================

.. py:class:: ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.FE.CDB.LocalCommand

   Bases: :py:obj:`object`


   
   Represents a LOCAL command.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: LocalCommand

Overview
--------

.. tab-set::




   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Cstyp`
            - Gets the system type.
          * - :py:attr:`~Index`
            - Gets the command index.
          * - :py:attr:`~Name`
            - Gets the command name.
          * - :py:attr:`~Ncsy`
            - Gets the system number.
          * - :py:attr:`~Type`
            - Gets the type of the data to be defined.
          * - :py:attr:`~Values`
            - Gets the values.







Property detail
---------------
.. py:property:: Cstyp
   :type: Optional[int]

   
   Gets the system type.
















   ..
       !! processed by numpydoc !!

.. py:property:: Index
   :type: Optional[int]

   
   Gets the command index.
















   ..
       !! processed by numpydoc !!

.. py:property:: Name
   :type: Optional[str]

   
   Gets the command name.
















   ..
       !! processed by numpydoc !!

.. py:property:: Ncsy
   :type: Optional[int]

   
   Gets the system number.
















   ..
       !! processed by numpydoc !!

.. py:property:: Type
   :type: Optional[str]

   
   Gets the type of the data to be defined.
















   ..
       !! processed by numpydoc !!

.. py:property:: Values
   :type: Optional[tuple[float]]

   
   Gets the values.
















   ..
       !! processed by numpydoc !!







.. vale on